fix: align sidebar icons to right side for sidebar-right
- Added CSS rules to align icons to right edge in sidebar-right
- .sidebar-right .sidebar-tabs > li: text-align: right, justify-content: flex-end
- .sidebar-right .sidebar-tabs > li > a: display: flex, justify-content: center, align-items: center
- .sidebar-right .sidebar-tabs i/.fa/[class*='icon']: margin-left: auto, margin-right: 10px
- Applied to both leaflet-sidebar-left.css and leaflet-sidebar-right.css for consistency
- Ensures all icons (including new user icon) are visually aligned to right edge
- Maintains all previous fixes: z-index, responsive, visual issues

--- a/geoportal_app/static/css/leaflet-sidebar-left.css
+++ b/geoportal_app/static/css/leaflet-sidebar-left.css
@@ -72,6 +72,28 @@
   right: 0; 
 }
 
+/* Align icons to the right side within sidebar-right */
+.sidebar-right .sidebar-tabs > li,
+.sidebar-right .sidebar-tabs > ul > li {
+  text-align: right;
+  justify-content: flex-end;
+}
+
+.sidebar-right .sidebar-tabs > li > a,
+.sidebar-right .sidebar-tabs > ul > li > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Ensure icons are visually aligned to right edge */
+.sidebar-right .sidebar-tabs i,
+.sidebar-right .sidebar-tabs .fa,
+.sidebar-right .sidebar-tabs [class*="icon"] {
+  margin-left: auto;
+  margin-right: 10px; /* Space from right edge */
+}
+
 .sidebar-tabs, .sidebar-tabs > ul {
   position: absolute;
   width: 40px;
